--- a/style.css
+++ b/style.css
@@ -8,8 +8,21 @@
 html, body{
     height: 100%;
     width: 100%;
+    color: white;
 }
 
 body{
     background-color: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 100px;
+    overflow: hidden;
+}
+
+h1 span{
+    display: inline-block;
 }
